--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "audicor_reader"]
-	path = audicor_reader
+[submodule "ekg/audicor_reader"]
+	path = ekg/audicor_reader
 	url = https://github.com/toosyou/audicor_reader
