--- a/abnormal_detection/sweep.yaml
+++ b/abnormal_detection/sweep.yaml
@@ -17,7 +17,17 @@ early_terminate:
 
 # Parameters to search over
 parameters:
-  sincconv_filter_length:
-    values: [15, 31, 63, 93]
-  sincconv_nfilters:
-    values: [8, 16]
+  branch_nlayers:
+      values: [1, 2, 3]
+
+  ekg_kernel_length:
+      values: [5, 7, 13, 21]
+  hs_kernel_length:
+      values: [5, 7, 13, 21]
+
+  final_nlayers:
+      values: [3, 5, 6]
+  final_kernel_length:
+      values: [5, 7, 13]
+  final_nonlocal_nlayers:
+      values: [0, 1, 2, 3]
