remove dirty data and do the parameter search

--- a/abnormal_detection/sweep.yaml
+++ b/abnormal_detection/sweep.yaml
@@ -31,3 +31,6 @@ parameters:
       values: [5, 7, 13]
   final_nonlocal_nlayers:
       values: [0, 1, 2, 3]
+
+  remove_dirty:
+      values: [0, 1, 2]
