--- a/ekg/configs.ini
+++ b/ekg/configs.ini
@@ -1,7 +1,8 @@
 [Paths]
-outcome = ./data/AHF2017_outcome_anonymous.xls
-lvef_path = ./data/LVEF_path.csv
-lvef_path_dur = ./data/LVEF_path_dur.csv
+outcome = /home/toosyou/projects/ekg/data/AHF2017_outcome_anonymous.xls
+lvef_path = /home/toosyou/projects/ekg/data/LVEF_path.csv
+lvef_path_dur = /home/toosyou/projects/ekg/data/LVEF_path_dur.csv
+dirtydata_indices = /home/toosyou/projects/ekg/data/dirtydata_indices.xlsx
 
 big_exam_dir = /home/toosyou/ext_ssd/Cardiology/交大數據心衰遠距教學/大檢查audicor
 big_exam_normal_dirs = /home/toosyou/ext_ssd/Cardiology/交大-normal/大檢查audicor, /home/toosyou/ext_ssd/Cardiology/1080409_心電圖原始檔
