--- a/abnormal_detection/sweep.yaml
+++ b/abnormal_detection/sweep.yaml
@@ -18,19 +18,22 @@ early_terminate:
 # Parameters to search over
 parameters:
   branch_nlayers:
-      values: [1, 2, 3]
+      values: [1, 2, 3, 4, 5]
 
   ekg_kernel_length:
-      values: [5, 7, 13, 21]
+      values: [5, 7, 13, 21, 35]
   hs_kernel_length:
-      values: [5, 7, 13, 21]
+      values: [5, 7, 13, 21, 35]
 
   final_nlayers:
       values: [3, 5, 6]
   final_kernel_length:
-      values: [5, 7, 13]
+      values: [5, 7, 13, 21, 35]
   final_nonlocal_nlayers:
-      values: [0, 1, 2, 3]
+      values: [0]
+
+  skip_connection:
+      values: [True, False]
 
   remove_dirty:
       values: [2]
