add crop center support instead of left crop

--- a/abnormal_detection/sweep.yaml
+++ b/abnormal_detection/sweep.yaml
@@ -37,6 +37,8 @@ parameters:
 
   skip_connection:
       values: [True, False]
+  crop_center:
+      values: [True, False]
 
   remove_dirty:
       values: [2]
