hazard prediction runable

--- a/ekg/configs.ini
+++ b/ekg/configs.ini
@@ -1,7 +1,7 @@
 [Paths]
 outcome = /home/toosyou/projects/ekg/data/AHF2017_outcome_anonymous.xls
 lvef_path = /home/toosyou/projects/ekg/data/LVEF_path.csv
-lvef_path_dur = /home/toosyou/projects/ekg/data/LVEF_path_dur.csv
+path_dur = /home/toosyou/projects/ekg/data/path_dur.csv
 dirtydata_indices = /home/toosyou/projects/ekg/data/dirtydata_indices.xlsx
 
 big_exam_dir = /home/toosyou/ext_ssd/Cardiology/交大數據心衰遠距教學/大檢查audicor
