update audicor 10s data preprocessing script

--- a/config.cfg
+++ b/config.cfg
@@ -10,3 +10,15 @@ output_dir = ./data/big_exam
 do_bandpass_filter = yes
 bandpass_filter_lowcut = 30
 bandpass_filter_highcut = 100
+
+[Audicor_10s]
+
+abnormal_dir = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/abnormal
+normal_dir = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/normal
+label_filenames = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/Audicor_HRV_event_20200102.xlsx, /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/HF10. Events assessment_20200109歸人.xlsx
+
+output_dir = ./data/audicor_10s
+
+do_bandpass_filter = yes
+bandpass_filter_lowcut = 30
+bandpass_filter_highcut = 100
