--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pylint = "*"
 jupyterlab = "*"
+rope = "*"
 
 [packages]
 better-exceptions = "*"
@@ -21,6 +22,7 @@ xlrd = "*"
 keras-radam = "*"
 tensorflow = "*"
 plotly = "*"
+libtmux = "*"
 
 [requires]
 python_version = "3.6"
