--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,11 @@
 [Big_Exam]
 
-abnormal_dirs = /mnt/gpu1-ssd/toosyou/Cardiology/TVGS/交大數據心衰遠距教學/大檢查audicor
-normal_dirs = /mnt/gpu1-ssd/toosyou/Cardiology/TVGS/交大-normal/大檢查audicor, /mnt/gpu1-ssd/toosyou/Cardiology/TVGS/1080409_心電圖原始檔
-label_filename = /mnt/gpu1-ssd/toosyou/Cardiology/TVGS/AHF2017_outcome_anonymous.xls
-dirtydata_filename = /mnt/gpu1-ssd/toosyou/Cardiology/TVGS/dirtydata_indices.xlsx
+abnormal_dirs = /home/toosyou/Cardiology/TVGS/交大數據心衰遠距教學/大檢查audicor
+normal_dirs = /home/toosyou/Cardiology/TVGS/交大-normal/大檢查audicor, /home/toosyou/Cardiology/TVGS/1080409_心電圖原始檔
+label_filename = /home/toosyou/Cardiology/TVGS/AHF2017_outcome_anonymous.xls
+dirtydata_filename = /home/toosyou/Cardiology/TVGS/dirtydata_indices.xlsx
 
-output_dir = ./data/big_exam
+output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/big_exam
 
 do_bandpass_filter = yes
 bandpass_filter_lowcut = 30
@@ -13,11 +13,11 @@ bandpass_filter_highcut = 100
 
 [Audicor_10s]
 
-abnormal_dir = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/abnormal
-normal_dir = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/normal
-label_filenames = /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/Audicor_HRV_event_20200102.xlsx, /mnt/gpu1-ssd/toosyou/Cardiology/audicor_10s/HF10. Events assessment_20200109歸人.xlsx
+abnormal_dir = /home/toosyou/Cardiology/audicor_10s/abnormal
+normal_dir = /home/toosyou/Cardiology/audicor_10s/normal
+label_filenames = /home/toosyou/Cardiology/audicor_10s/Audicor_HRV_event_20200102.xlsx, /home/toosyou/Cardiology/audicor_10s/HF10. Events assessment_20200109歸人.xlsx
 
-output_dir = ./data/audicor_10s
+output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/audicor_10s
 
 do_bandpass_filter = yes
 bandpass_filter_lowcut = 30
