generate sex, age, height, weight, BMI info from audicor_10s

--- a/config.cfg
+++ b/config.cfg
@@ -15,7 +15,8 @@ bandpass_filter_highcut = 100
 
 abnormal_dir = /home/toosyou/Cardiology/audicor_10s/abnormal
 normal_dir = /home/toosyou/Cardiology/audicor_10s/normal
-label_filenames = /home/toosyou/Cardiology/audicor_10s/Audicor_HRV_event_20200102.xlsx, /home/toosyou/Cardiology/audicor_10s/HF10. Events assessment_20200109歸人.xlsx
+label_dir = /home/toosyou/Cardiology/audicor_10s/labels
+label_filenames = /home/toosyou/Cardiology/audicor_10s/labels/Audicor_HRV_event_20200102.xlsx, /home/toosyou/Cardiology/audicor_10s/labels/HF10. Events assessment_20200109歸人.xlsx
 
 output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/audicor_10s
 
