update new results

--- a/config.cfg
+++ b/config.cfg
@@ -7,9 +7,9 @@ dirtydata_filename = /home/toosyou/Cardiology/TVGS/dirtydata_indices.xlsx
 
 output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/big_exam
 
-do_bandpass_filter = no
+do_bandpass_filter = yes
 bandpass_filter_lowcut = 30
-bandpass_filter_highcut = 100
+bandpass_filter_highcut = 120
 
 [Audicor_10s]
 
@@ -20,6 +20,6 @@ label_filenames = /home/toosyou/Cardiology/audicor_10s/labels/Audicor_HRV_event_
 
 output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/audicor_10s
 
-do_bandpass_filter = no
+do_bandpass_filter = yes
 bandpass_filter_lowcut = 30
-bandpass_filter_highcut = 100
+bandpass_filter_highcut = 120
