include height, weight and BMI into hazard prediction

--- a/config.cfg
+++ b/config.cfg
@@ -2,7 +2,7 @@
 
 abnormal_dirs = /home/toosyou/Cardiology/TVGS/交大數據心衰遠距教學/大檢查audicor
 normal_dirs = /home/toosyou/Cardiology/TVGS/交大-normal/大檢查audicor, /home/toosyou/Cardiology/TVGS/1080409_心電圖原始檔
-label_filename = /home/toosyou/Cardiology/TVGS/AHF2017_outcome_anonymous.xls
+label_filenames = /home/toosyou/Cardiology/TVGS/AHF2017_outcome_anonymous.xls, /home/toosyou/Cardiology/TVGS/AHF大表(120415)_Cleansed_2IBM.xlsx
 dirtydata_filename = /home/toosyou/Cardiology/TVGS/dirtydata_indices.xlsx
 
 output_dir = /mnt/nas/homes/toosyou/projects/ekg/data/big_exam
