add abnormal detection documentation to readme, and wandb entity to config, prediction notebooks upload

--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,7 @@
+[General]
+wandb_entity = toosyou
+number_gpu = 2
+
 [Big_Exam]
 
 abnormal_dirs = /home/toosyou/Cardiology/TVGS/交大數據心衰遠距教學/大檢查audicor
